--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   },
   "dependencies": {
     "next": "12.0.7",
+    "node-sass": "^6.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "sass": "^1.45.1"
+    "sass": "^1.45.1",
+    "styled-jsx-plugin-sass": "^1.0.0"
   },
   "devDependencies": {
     "eslint": "8.5.0",
