--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "^12.0.7",
+    "next": "^12.1.0",
     "node-sass": "^6.0.1",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "sass": "^1.45.1",
     "styled-jsx-plugin-sass": "^1.0.0"
   },
